packages/svelte/tests/compiler-errors/samples/runes-wrong-state-placement-2/main.svelte.js
function a() {
	return $state(1);
}
